fix layout issue in dnn 7.2 or above

--- a/yafsrc/YetAnotherForum.NET/resources/css/forum.css
+++ b/yafsrc/YetAnotherForum.NET/resources/css/forum.css
@@ -641,3 +641,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
     background-position: -88px 0;
     background-color: #e6e6e6;
 }
+
+.yafnet img {
+	max-width: inherit;
+}
